06/07/16
  -Rewrite eip.py.  Trying to make it easier to use, only Read functions work for now

04/07/16
  -Modified identify.py to get rid of the functions for the lists

03/04/16
  -Fixed issue reading array only returning first element
  
02/25/16
  -more mods to identify.py, made it more pythonic with JordanCClark's suggestions
  -try without binding if looping through ipv4 addreses doesn't return anything

02/22/16
  -identify.py now sends packet out each network adapter

12/11/15
  -Fixed incorrect vendorID's in identify.py
  -Filter out garbage from GetTagList
  -Added MultiRead() function

11/28/15
  -Renamed SetIPAddress to IPAddress and SetProcessorSlot to ProcessorSlot
  -Updated README with identify.py info

11/27/15
  -SequencCounter starts at 1, apparently L32E has problem with it starting at zero

11/23/15
  -Added rolling context

10/15/15
  -Pretty major rewrite of how we build the CIP request, more to come I'm sure

10/14/15
  -DataType is retreived properly now (one byte)

10/09/15
  -Reworked the Read function a bit
  
10/08/15
  -Updated TagNameParser and InitialRead to store only base tag
  -Fixed read STRING array returning only the first string
  
10/07/15
  -Initial reads minimum amount of data to get data type

10/06/15
  -Fixed single bool array read derp, removed some old code
  -Reworked CIPDataTypes dict
  -Removed, obsolete functions
  -Context is no longer a string
  -Fixed STRING array reads
  
10/05/15
  -Fixed multi dim write
  -Added write single array bool support
  
10/04/15
  -Added multi dim read support

10/01/15
  -A bunch of rework for reading/writing bit of a word
  -Cleaned up extra read when writing to tag

09/28/15
  -Read single BOOL from array works now, reworked initial tag read
  -Fixed bit of a word reading, changed code for checking value of bit of a word
  
09/27/15
  -Each unique tag read gets stored in a dictionary so we won't read it again
      when we do a write